k8s/homeassistant/homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-deployment
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - image: ghcr.io/home-assistant/home-assistant:stable
          name: homeassistant
          ports:
            - containerPort: 8123
              protocol: TCP
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: "/config"
              name: homeassistant-opt-volume
            - mountPath: /etc/localtime
              name: homeassistant-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: homeassistant-opt-volume
          persistentVolumeClaim:
            claimName: homeassistant-opt-claim
        - name: homeassistant-claim1
          persistentVolumeClaim:
            claimName: homeassistant-claim1
            readOnly: true
status: {}
