k8s/homeassistant/homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  # type: NodePort
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8123
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8123
  selector:
    app: homeassistant
