k8s/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
    kubernetes.io/name: "homeassistant"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
  selector:
    app: homeassistant
